Feat move block (#131)
* feat create block

* feat create block

* feat create block

* feat: move block without scoring impact

* feat: move block without scoring impact

* feat: move block without scoring impact

* changes.

Co-authored-by: Miwo <inf104162@fh-wedel.de>